[project]
name = "validator-mcp"
version = "0.1.0"
description = "This project provides a tool for validating documentation markdown files. It checks for broken URLs and ensures that the files adhere to a predefined format template, leveraging AI to enhance the validation process."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.0.2",
    "langchain[google-genai]>=1.0.5",
    "markdown-analysis>=0.1.5",
    "markdown-it-pyrs>=0.4.0",
    "pydantic-ai>=1.14.1",
    "python-markdown>=0.1.0",
    "rich>=14.2.0",
]
